--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -4,7 +4,6 @@
 @tailwind components;
 @tailwind utilities;
 
-
 :root {
   --foreground-rgb: 255, 255, 255;
   --background-start-rgb: 26, 25, 29;
@@ -79,11 +78,7 @@ html {
 
 /* Animated Background */
 .animated-bg {
-  background: linear-gradient(
-    45deg,
-    rgba(139, 92, 246, 0.1),
-    rgba(59, 130, 246, 0.1)
-  );
+  background: linear-gradient(45deg, rgba(139, 92, 246, 0.1), rgba(59, 130, 246, 0.1));
   background-size: 400% 400%;
   animation: gradient 15s ease infinite;
 }
